Fix footer margin + fix alignment issues on Service Catalog (#1413)
* Fix alignment issues on Service Catalog
* aligns settings menu with header on Service Catalog
* changes header's left/right margin to 48px on both sides, on all pages
* resolves issue where last card in a row on Service Catalog has an extra gap on its right side
* resolves card S20-945

* reduce blank space between page's content and footer graphic

--- a/cmd/ui/assets/src/app/features/app-store/apps-list/apps-list.component.scss
+++ b/cmd/ui/assets/src/app/features/app-store/apps-list/apps-list.component.scss
@@ -83,7 +83,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-right: -30px;
 
   .card {
     display: flex;
